--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -13,3 +13,14 @@ DisplayNotFound=Display Not Found
 ShowEmployeeList=Show Employee List
 EmployeeList=Employee List
 ListOfAllEmployees=List of all employees
+
+# Employees Details 
+EmployeeDetailsOf=Employee Details of
+EmployeeIDColon=Employee ID:
+FirstName=First Name
+LastName=Last Name
+Address=Address
+City=City
+PostalCode=Postal Code
+PhoneHome=Phone (Home)
+Country=Country
