--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -24,3 +24,12 @@ City=City
 PostalCode=Postal Code
 PhoneHome=Phone (Home)
 Country=Country
+
+# Employees Resume
+ResumeOf=Resume of
+Info=Info
+Projects=Projects
+Hobbies=Hobbies
+Notes=Notes
+FlipToResume=Flip to Resume
+FlipToResume.tooltip=See the resume of this employee
