step 11 Navigate tutorial

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -2,21 +2,26 @@
 appTitle=SAPUI5 Navigation
 appDescription=A simple app that explains how to use navigation and routing features of SAPUI5
 
+# Home Page
 iWantToNavigate=I want to navigate
 homePageTitle=Home
 
+# Not Found
 NotFound=Not Found
 NotFound.text=Sorry, but the requested resource is not available.
 NotFound.description=Please check the URL and try again.
-
 DisplayNotFound=Display Not Found
 
+# Employees list
 ShowEmployeeList=Show Employee List
 EmployeeList=Employee List
 ListOfAllEmployees=List of all employees
 
+# Employees details
 EmployeeDetailsOf=Employee Details of
 EmployeeIDColon=Employee ID:
+
+# Employees labels
 FirstName=First Name
 LastName=Last Name
 Address=Address
@@ -24,7 +29,12 @@ City=City
 PostalCode=Postal Code
 PhoneHome=Phone (Home)
 Country=Country
+Region=Region
+EmployeeID=Employee ID
+Phone=Phone
+Employees=Employees
 
+# Employees Resume
 ResumeOf=Resume of
 Info=Info
 Projects=Projects
@@ -32,3 +42,11 @@ Hobbies=Hobbies
 Notes=Notes
 FlipToResume=Flip to Resume
 FlipToResume.tooltip=See the resume of this employee
+
+
+# Employees Overview
+EmployeeOverview=Employee Overview
+ShowEmployeeOverview=Show Employee Overview
+EmployeeOverviewTop=Employee Overview Top
+
+
